<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_EventType" Id="{958c92db-32ca-4dce-a4f7-a49212f20e74}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_EventType :
(
	Alarm := 0,
	Message := 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>