<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{798ee332-7b17-4a9d-a450-87f1f742e8e3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	b_button_1 AT %I* : BOOL;
	b_button_2 AT %I* : BOOL;
	b_button_3 AT %I* : BOOL;
	b_button_4 AT %I* : BOOL;
	
	b_led_1 AT %Q* : BOOL;
	b_led_2 AT %Q* : BOOL;	
	b_led_3 AT %Q* : BOOL;
	b_led_4 AT %Q* : BOOL;
	
	
	bDigital1 : BOOL;
	bDigital2 : BOOL;
	iData1 : INT;
	iData2 : INT;
	strText1 : STRING;
	strText2 : STRING;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>